fix about html and blog header spacing

--- a/blog/css/blog.css
+++ b/blog/css/blog.css
@@ -1,4 +1,4 @@
-
+.content-wrap header .item,
 article header .item{
 	margin: 0;
 }
